@@ -13,11 +13,12 @@ import java.lang.Object;
 public class BoxUnboxSampleTinyAsmDump {
 
 	public static byte[] dump () throws Exception {
-		return new BoxUnboxSampleTinyAsmDump().__dump__("cc1sj.tinyasm.util.BoxUnboxSample");
+		return new BoxUnboxSampleTinyAsmDump().dump("cc1sj.tinyasm.util.BoxUnboxSample");
 	}
 
-	public byte[] __dump__(String className) throws Exception {
-		ClassBody classBody = ClassBuilder.make(className).access(ACC_PUBLIC | ACC_SUPER).body();
+	public byte[] dump(String className) throws Exception {
+		ClassBody classBody = ClassBuilder.make(className)
+			.access(ACC_PUBLIC | ACC_SUPER).body();
 
 		__init_(classBody);
 		_funcLong(classBody);
@@ -40,7 +41,7 @@ public class BoxUnboxSampleTinyAsmDump {
 
 	protected void _funcLong(ClassBody classBody) {
 		MethodCode code = classBody.method("funcLong")
-		.parameter("l",Long.class).begin();
+			.parameter("l",Long.class).begin();
 
 		code.LINE(5);
 		code.LOAD("l");
@@ -49,12 +50,12 @@ public class BoxUnboxSampleTinyAsmDump {
 		code.LINE(6);
 		code.LOAD("ll");
 		code.VIRTUAL(Long.class, "longValue")
-				.reTurn(long.class).INVOKE();
+			.reTurn(long.class).INVOKE();
 		code.LOADConst(1L);
 		code.ADD();
 		code.STATIC(Long.class, "valueOf")
-				.reTurn(Long.class)
-				.parameter(long.class).INVOKE();
+			.reTurn(Long.class)
+			.parameter(long.class).INVOKE();
 		code.STORE("l");
 
 		code.LINE(7);
@@ -65,19 +66,19 @@ public class BoxUnboxSampleTinyAsmDump {
 
 	protected void _funclong(ClassBody classBody) {
 		MethodCode code = classBody.method("funclong")
-		.parameter("l",long.class).begin();
+			.parameter("l",long.class).begin();
 
 		code.LINE(10);
 		code.LOAD("l");
 		code.STATIC(Long.class, "valueOf")
-				.reTurn(Long.class)
-				.parameter(long.class).INVOKE();
+			.reTurn(Long.class)
+			.parameter(long.class).INVOKE();
 		code.STORE("ll",Long.class);
 
 		code.LINE(11);
 		code.LOAD("ll");
 		code.VIRTUAL(Long.class, "longValue")
-				.reTurn(long.class).INVOKE();
+			.reTurn(long.class).INVOKE();
 		code.LOADConst(1L);
 		code.ADD();
 		code.STORE("l");
@@ -92,42 +93,42 @@ public class BoxUnboxSampleTinyAsmDump {
 		MethodCode code = classBody.method("init").begin();
 
 		code.LINE(15);
-		code.LOADConst(Long.valueOf(10L));
+		code.LOADConst(new Long(10L));
 		code.STORE("l",long.class);
 
 		code.LINE(16);
-		code.LOADConst(Long.valueOf(100L));
+		code.LOADConst(new Long(100L));
 		code.STATIC(Long.class, "valueOf")
-				.reTurn(Long.class)
-				.parameter(long.class).INVOKE();
+			.reTurn(Long.class)
+			.parameter(long.class).INVOKE();
 		code.STORE("ll",Long.class);
 
 		code.LINE(17);
 		code.LOAD("this");
 		code.LOAD("l");
 		code.VIRTUAL("funclong")
-				.parameter(long.class).INVOKE();
+			.parameter(long.class).INVOKE();
 
 		code.LINE(18);
 		code.LOAD("this");
 		code.LOAD("ll");
 		code.VIRTUAL("funcLong")
-				.parameter(Long.class).INVOKE();
+			.parameter(Long.class).INVOKE();
 
 		code.LINE(19);
 		code.LOAD("this");
 		code.LOADConst(1L);
 		code.VIRTUAL("funclong")
-				.parameter(long.class).INVOKE();
+			.parameter(long.class).INVOKE();
 
 		code.LINE(20);
 		code.LOAD("this");
-		code.LOADConst(Long.valueOf(2L));
+		code.LOADConst(new Long(2L));
 		code.STATIC(Long.class, "valueOf")
-				.reTurn(Long.class)
-				.parameter(long.class).INVOKE();
+			.reTurn(Long.class)
+			.parameter(long.class).INVOKE();
 		code.VIRTUAL("funcLong")
-				.parameter(Long.class).INVOKE();
+			.parameter(Long.class).INVOKE();
 
 		code.LINE(21);
 		code.RETURN();
